--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
         "webpack-cli": "^5.1.4"
     },
     "devDependencies": {
-        "@babel/core": "^7.5.4",
-        "@babel/preset-env": "^7.5.4",
-        "babel-loader": "^8.0.6",
+        "@babel/core": "^7.24.9",
+        "@babel/preset-env": "^7.25.0",
+        "babel-loader": "^8.3.0",
         "clean-webpack-plugin": "^3.0.0",
         "html-webpack-plugin": "^5.6.0",
-        "webpack-dev-server": "^3.7.2"
+        "json-loader": "^0.5.7",
+        "webpack-dev-server": "^5.0.4"
     }
 }
