--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node src/server/index.js",
-        "build": "webpack",
         "build-prod": "webpack --config webpack.prod.js",
         "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
     },
@@ -17,6 +16,7 @@
         "express": "^4.19.2",
         "node": "^20.16.0",
         "webpack": "^5.93.0",
+        "webpack-bundle-analyzer": "^4.10.2",
         "webpack-cli": "^5.1.4"
     },
     "devDependencies": {
